Prevented scene selection from overlapping mosaic toolbar buttons.

--- a/modules/gui/frontend/src/app/home/body/process/mosaic/sceneSelection.module.css
+++ b/modules/gui/frontend/src/app/home/body/process/mosaic/sceneSelection.module.css
@@ -2,6 +2,7 @@
     max-height: 80rem;
     max-width: 95rem;
     z-index: 1;
+    width: calc(100% - 7rem);
 }
 
 .content {
